submit news code

--- a/app.json
+++ b/app.json
@@ -1,8 +1,10 @@
 {
   "pages": [
-    "pages/news/news",
+    "pages/movies/movies",
     "pages/index/index",
-    "pages/news/news-detail/news-detail"
+    "pages/news/news",
+    "pages/news/news-detail/news-detail",
+    "pages/movies/movie-more/movie-more"
   ],
   "window": {
     "navigationBarTitleText": "蓝莓派",
@@ -11,5 +13,24 @@
     "navigationStyle":"default"
     
   },
+  "tabBar": {
+    "borderStyle": "white",
+    "selectedColor": "#109D59",
+    "backgroundColor": "#fff",
+    "list": [
+        {
+            "pagePath": "pages/news/news",
+            "text": "音与文",
+            "iconPath": "pages/images/yuedu.png",
+            "selectedIconPath": "pages/images/yuedu.png"
+        },
+        {
+            "pagePath": "pages/movies/movies",
+            "text": "影与评",
+            "iconPath": "pages/images/diany.png",
+            "selectedIconPath": "pages/images/diany.png"
+        }
+    ]
+},
   "debug": false
 }
