--- a/app.json
+++ b/app.json
@@ -1,37 +1,13 @@
 {
   "pages": [
-    "pages/movies/movies",
-    "pages/index/index",
-    "pages/news/news",
-    "pages/news/news-detail/news-detail",
-    "pages/movies/movie-more/movie-more",
-    "pages/movies/movie-details/movie-details"
+    "pages/index"
   ],
   "window": {
-    "navigationBarTitleText": "蓝莓派",
-    "navigationBarBackgroundColor": "white",
+    "navigationBarTitleText": "正在热映",
+    "navigationBarBackgroundColor": "#333",
     "navigationBarTextStyle": "white",
     "navigationStyle":"default"
     
   },
-  "tabBar": {
-    "borderStyle": "white",
-    "selectedColor": "#109D59",
-    "backgroundColor": "#fff",
-    "list": [
-        {
-            "pagePath": "pages/news/news",
-            "text": "音与文",
-            "iconPath": "pages/images/yuedu.png",
-            "selectedIconPath": "pages/images/yuedu.png"
-        },
-        {
-            "pagePath": "pages/movies/movies",
-            "text": "影与评",
-            "iconPath": "pages/images/diany.png",
-            "selectedIconPath": "pages/images/diany.png"
-        }
-    ]
-},
   "debug": false
 }
