--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
     "pages": [
         "pages/index",
+        "pages/search/search",
         "pages/top250/top250",
         "pages/coming-soon/coming-soon"
     ],
